Crear Usuario y Login

--- a/server/.env
+++ b/server/.env
@@ -5,3 +5,6 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mysql://root:123456@localhost:3306/jakedoes?schema=public"
+
+SECRET_KEY = IMABARBIEGIRLINABARBIEWORLD
+JWT_EXPIRE = 2h
