--- a/client/app/package.json
+++ b/client/app/package.json
@@ -21,9 +21,10 @@
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
     "@coreui/angular": "^4.5.8",
-    "@coreui/coreui": "^4.2.6",
+    "@coreui/coreui": "^4.3.0",
     "@coreui/icons": "^3.0.1",
     "@coreui/icons-angular": "^4.5.8",
+    "bootstrap": "^5.3.1",
     "ngx-toastr": "^17.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
