--- a/client/app/package.json
+++ b/client/app/package.json
@@ -25,6 +25,7 @@
     "@coreui/icons": "^3.0.1",
     "@coreui/icons-angular": "^4.5.8",
     "bootstrap": "^5.3.1",
+    "luxon": "^3.4.0",
     "ngx-toastr": "^17.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
