--- a/server/package.json
+++ b/server/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "@prisma/client": "^4.14.1",
+    "luxon": "^3.4.0",
     "multer": "^1.4.5-lts.1"
   },
   "prisma": {
